--- a/CloudFunctions/functions/package.json
+++ b/CloudFunctions/functions/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.5.0",
+    "@google-cloud/bigquery": "^7.3.0",
     "axios": "^1.6.0",
     "node-schedule": "^2.1.1"
   },
