--- a/CloudFunctions/functions/package.json
+++ b/CloudFunctions/functions/package.json
@@ -18,8 +18,8 @@
   "dependencies": {
     "@google-cloud/bigquery": "^7.3.0",
     "axios": "^1.6.0",
-    "firebase-admin": "^12.0.0",
-    "firebase-functions": "4.9.0",
+    "firebase-admin": "^13.6.0",
+    "firebase-functions": "^7.0.1",
     "node-schedule": "^2.1.1"
   },
   "devDependencies": {
