--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -9,14 +9,14 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "firebase": "^10.7.0",
     "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0",
     "date-fns": "^2.30.0",
-    "lucide-react": "^0.294.0"
+    "firebase": "^12.6.0",
+    "lucide-react": "^0.294.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -26,7 +26,7 @@
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
-    "vite": "^5.4.11",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "vite": "^5.4.11"
   }
 }
